test/files/neg/t12878/Test.scala
class Test {
  new U
  new H()
  new T.H()
}
